// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render multiple labels and inputs 1`] = `
<form
  action=""
  method="POST"
>
  <label
    class="center-text"
    for="A"
  >
    A
  </label>
  <input
    id="A"
    name="regionId"
    type="radio"
    value="1"
  />
  <label
    class="center-text"
    for="B"
  >
    B
  </label>
  <input
    id="B"
    name="regionId"
    type="radio"
    value="2"
  />
  <label
    class="center-text"
    for="C"
  >
    C
  </label>
  <input
    id="C"
    name="regionId"
    type="radio"
    value="3"
  />
  <button
    type="submit"
  >
    Delete
  </button>
</form>
`;

exports[`renders single label and input with one region 1`] = `
<form
  action=""
  method="POST"
>
  <label
    class="center-text"
    for="RegionName"
  >
    RegionName
  </label>
  <input
    id="RegionName"
    name="regionId"
    type="radio"
    value="1234"
  />
  <button
    type="submit"
  >
    Delete
  </button>
</form>
`;
